@@ -324,6 +324,12 @@ common.logic.not=Not
 
 common.invalidRql=Invalid RQL
 
+common.lifecycle.state.preInitialize=Pre initialize
+common.lifecycle.state.initializing=Initializing
+common.lifecycle.state.running=Running
+common.lifecycle.state.terminating=Terminating
+common.lifecycle.state.terminated=Terminated
+
 share.sharing=Sharing
 share.userName=Username
 share.accessType=Access type
